add gender in question statistic
